<!--
  ~     Cafe/Cafe.app.main
  ~     strings.xml Copyrighted by Yamin Siahmargooei at 2022/12/9
  ~     strings.xml Last modified at 2022/12/9
  ~     This file is part of Cafe/Cafe.app.main.
  ~     Copyright (C) 2022  Yamin Siahmargooei
  ~
  ~     Cafe/Cafe.app.main is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Cafe/Cafe.app.main is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Cafe.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Cafe</string>
    <string name="app_crashed">مشکلی در برنامه پیش آمده، برای خروج اینجا را لمس کنید.</string>
    <string name="welcome">کاربر %s خوش آمدید!</string>
    <string name="orders">سفارش‌ها</string>
    <string name="new_order">سفارش‌جدید</string>
    <string name="db_null_error">خطای اتصال به پایگاه داده</string>
    <string name="products">محصولات</string>
    <string name="add_product">اضافه کردن محصول</string>
    <string name="product_name">نام محصول</string>
    <string name="please_wait">لطفا منتظر بمانید</string>
    <string name="plus">اضافه</string>
    <string name="minus">کم</string>
    <string name="save_order">ثبت سفارش</string>
    <string name="deliver">تحویل</string>
    <string name="registered">ثبت شده</string>
    <string name="delivered">تحویل داده شده</string>
    <string name="no_order_registered">هیچ سفارشی ثبت نشده است.</string>
    <string name="order_day_id">شماره روزانه</string>
    <string name="order_date">تاریخ</string>
    <string name="order_status">وضعیت</string>
    <string name="order_details">جزییات</string>
    <string name="adad">عدد</string>
    <string name="adad_template">%s عدد</string>
    <string name="cancel">لغو</string>
    <string name="order_is_empty">محصولی به سفارش اضافه نشده است.</string>
    <string name="order_saving_cancel">سفارش لغو شد.</string>
    <string name="categories">دسته‌ها</string>
    <string name="category">دسته</string>
    <string name="remove">حذف</string>
    <string name="product_category">دسته محصول</string>
    <string name="product_price">قیمت محصول</string>
    <string name="price">قیمت</string>
    <string name="confirm">تایید</string>
    <string name="category_icon">نماد دسته</string>
    <string name="choose_image_optional">انتخاب عکس (اختیاری)</string>
    <string name="data_empty">متاسفانه داده‌ای یافت نشد</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="exit_prompt">آیا واقعا قصد خروج از برنامه را دارید؟</string>
    <string name="prompt_default">آیا از انجام این کار مطمئن هستید؟</string>
    <string name="not_categories_should_add_category">دسته‌ای وجود ندارد، بهتر است پیش از این دسته‌ای اضافه کنید.</string>
    <string name="edit">ویرایش</string>
    <string name="enter_all_fields">لطفا همه موارد را تکمیل کنید.</string>
    <string name="add">اضافه کردن</string>
    <string name="db_update_error">خطا در بروزرسانی پایکاه داده</string>
    <string name="db_query_restricted">خطا در تغییر پایگاه داده، این کار امکان پذیر نیست.</string>
    <string name="item_add_success">%s با موفقیت اضافه شد.</string>
    <string name="item_edit_success">%s با موفقیت ویرایش شد.</string>
    <string name="item_delete_success">%s با موفقیت حذف شد.</string>
    <string name="product">محصول</string>
    <string name="product_image">عکس محصول</string>
    <string name="phone_number">شماره تماس</string>
    <string name="address">نشانی</string>
    <string name="subscribers">اشتراک‌ها</string>
    <string name="subscriber">اشتراک</string>
    <string name="name_family">نام و نام خانوادگی</string>
    <string name="category_image">تصویر دسته</string>
    <string name="description">توضیحات</string>
    <string name="select_subscriber">انتخاب اشتراک</string>
    <string name="rial">ریال</string>
    <string name="rial_template">%s ریال</string>
    <string name="order">سفارش</string>
    <string name="quantity">تعداد</string>
    <string name="total_price_template">مجموع قیمت: %s</string>
    <string name="total_price">مجموع قیمت</string>
    <string name="account">اکانت</string>
    <string name="accounts">اکانت‌ها</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="invalid_username_password">نام کاربری یا رمز عبور صحیح نیست.</string>
    <string name="login">ورود</string>
    <string name="superuser">مدیر کل</string>
    <string name="report_user">کاربر گزارش</string>
    <string name="schedule_user">کاربر حضورغیاب</string>
    <string name="finance_user">کاربر مالی</string>
    <string name="guest_user">کاربر مهمان</string>
    <string name="permission_denied">شما به این قسمت دسترسی ندارید.</string>
    <string name="order_user">کاربر سفارش</string>
    <string name="login_success">کاربر %s با موفقیت وارد شد.</string>
    <string name="login_failed">ورود ناموفق بود، دوباره تلاش کنید.</string>
    <string name="permission_level">سطح دسترسی</string>
    <string name="first_account_is_superuser">اولین اکانت به عنوان اکانت مدیرکل تعریف خواهد شد.</string>
    <string name="login_account">ورود به اکانت</string>
    <string name="reports">گزارش‌گیری</string>
    <string name="workers">نیروهای کار</string>
    <string name="job">عنوان شغلی</string>
    <string name="worker">نیروی کار</string>
    <string name="payments">پرداختی‌ها</string>
    <string name="payment_value">مقدار پرداختی</string>
    <string name="no_worker_to_pay">نیروی کاری اضافه نشده که پرداختی ایجاد شود.</string>
    <string name="payment">پرداختی</string>
    <string name="day">روز</string>
    <string name="start_date">زمان شروع کار</string>
    <string name="end_date">زمان پایان کار</string>
    <string name="no_products">محصولی برای سفارش دادن وجود ندارد.</string>
    <string name="crud_delete_not_allowed">شما اجازه پاک کردن ندارید.</string>
    <string name="crud_update_not_allowed">شما اجازه ویرایش  ندارید.</string>
    <string name="guest">مهمان</string>
    <string name="schedule">حضورغیاب</string>
    <string name="report_type">نوع گزارش</string>
    <string name="schedule_end">زمان خروج</string>
    <string name="schedule_start">زمان ورود</string>
    <string name="no_workers_to_schedule">نیروی کاری اضافه نشده که حضور غیابی ایجاد شود.</string>
    <string name="report_detail">جزییات گزارش</string>
    <string name="max_product_price">حداکثر قیمت محصول</string>
    <string name="sharing">اشتراک گذاری</string>
    <string name="min_price">حداقل قیمت</string>
    <string name="max_price">حداکثر قیمت</string>
    <string name="end_datetime">تاریخ و زمان پایان</string>
    <string name="start_datetime">تاریخ و زمان شروع</string>
    <string name="select_date">تاریخ و زمان را انتخاب کنید</string>
    <string name="select_date_range">انتخاب دوره زمانی</string>
    <string name="search">جستجو</string>
    <string name="newest_orders">جدیدترین سفارش ها</string>
    <string name="oldest_orders">قدیمی ترین سفارش ها</string>
    <string name="fattest_orders">سنگین ترین سفارش ها</string>
    <string name="thinnest_orders">سبک ترین سفارش ها</string>
    <string name="db_general_error">خطا در ایجاد تغییرات در پایگاه داده</string>
    <string name="order_basket">سبد خرید سفارش</string>
    <string name="remove_from_basket">کم کردن از سبد</string>
    <string name="add_to_basket">اضافه کردن به سبد</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="chosen_products">محصولات انتخاب شده</string>
    <string name="sell_quantity">تعداد فروش</string>
    <string-array name="report_values">
        <item>@string/orders</item>
        <item>@string/products</item>
        <item>@string/categories</item>
        <item>@string/accounts</item>
        <item>@string/subscribers</item>
        <item>@string/workers</item>
        <item>@string/payments</item>
        <item>@string/schedule</item>
    </string-array>
</resources>