<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/products_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/products"
            tools:layout_editor_absoluteX="157dp"
            tools:layout_editor_absoluteY="184dp" />

        <Button
            android:id="@+id/list_order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/orders"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="27dp" />

        <Button
            android:id="@+id/new_order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_order"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="34dp" />

        <Button
            android:id="@+id/categories_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            tools:layout_editor_absoluteX="281dp"
            tools:layout_editor_absoluteY="152dp" />

        <Button
            android:id="@+id/subscriber_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subscribers"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="216dp" />

        <Button
            android:id="@+id/account_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/accounts"
            tools:layout_editor_absoluteX="248dp"
            tools:layout_editor_absoluteY="216dp" />

        <Button
            android:id="@+id/account_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_account"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="280dp" />

        <Button
            android:id="@+id/reports_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reports"
            tools:layout_editor_absoluteX="214dp"
            tools:layout_editor_absoluteY="280dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/buttons_flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:constraint_referenced_ids="new_order_button,list_order_button,products_button,categories_button,subscriber_button,account_button,account_login_button,reports_button"
            app:flow_horizontalGap="16dp"
            app:flow_maxElementsWrap="2"
            app:flow_verticalGap="16dp"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="aligned"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>