<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Cafe/Cafe.app.main
  ~     order_report_menu.xml Copyrighted by Yamin Siahmargooei at 2022/12/9
  ~     order_report_menu.xml Last modified at 2022/12/9
  ~     This file is part of Cafe/Cafe.app.main.
  ~     Copyright (C) 2022  Yamin Siahmargooei
  ~
  ~     Cafe/Cafe.app.main is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Cafe/Cafe.app.main is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Cafe.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newest_orders"
        android:title="@string/newest_orders"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/oldest_orders"
        android:title="@string/oldest_orders"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fattest_orders"
        android:title="@string/fattest_orders"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/thinnest_orders"
        android:title="@string/thinnest_orders"
        app:showAsAction="ifRoom" />
</menu>